# Kanonix

./: .env.development  .env.production  .env.staging  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  setup-frontend.ps1  setup-frontend.sh  setup.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: admin.py  auth.py  councils.py  deps.py  events.py  gallery.py  kanoons.py  market.py  orders.py  reviews.py
app/core/: config.py  logging.py  redis.py
app/db/: session.py
app/models/: __init__.py  base.py  entities.py
app/schemas/: auth.py  event.py
app/services/: pricing.py  rules.py  security.py  storage.py  tenant.py
app/utils/: rate_limit.py
app/workers/: seat_releaser.py
frontend/arya/: .env.development  .env.production  .env.staging  .env.test  Dockerfile  README.md  docker-compose.frontend.yml  docker-compose.fullstack.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/arya/src/app/: App.tsx
frontend/arya/src/components/checkout/: SeatMap.tsx
frontend/arya/src/hooks/: queries.ts  useAuthState.ts
frontend/arya/src/pages/: NotFoundPage.tsx
frontend/arya/src/routes/: AppRouter.tsx  RouteGuards.tsx
frontend/arya/src/styles/: global.css
frontend/arya/src/types/: domain.ts
frontend/arya/src/utils/: env.ts
scripts/: create_superadmin.py  seed.py
tests/: test_auth.py  test_event_creation.py  test_market_booth.py  test_review_rules.py  test_seat_reservation.py  test_trip_subsidy.py
(+21 files in other folders)
